--- a/frontend/admin/src/app/logado/logado.component.html
+++ b/frontend/admin/src/app/logado/logado.component.html
@@ -1,21 +1,21 @@
 <mat-drawer-container autosize>
-  <mat-drawer class="mat-elevation-z4" #drawer [mode]="drawerMode$ | async" (closedStart)="onDrawerClosedStart()">
+  <mat-drawer class="mat-elevation-z2" #drawer [mode]="drawerMode$ | async" (closedStart)="onDrawerClosedStart()">
     <mat-toolbar color="accent">
       <span>Ubernise</span>
     </mat-toolbar>
 
     <button mat-menu-item (click)="onMenuItemClicked('/')">
-      <mat-icon>home</mat-icon>
-      Home
+      <mat-icon>dashboard</mat-icon>
+      Dash
     </button>
-    <!-- <button mat-menu-item (click)="onMenuItemClicked('/carteiras')">
-      <mat-icon>wallet</mat-icon>
+    <button mat-menu-item (click)="onMenuItemClicked('/carteiras')">
+      <mat-icon>account_balance_wallet</mat-icon>
       Carteiras
-    </button> -->
+    </button>
   </mat-drawer>
 
   <mat-drawer-content>
-    <mat-toolbar class="mat-elevation-z2" color="primary">
+    <mat-toolbar color="primary">
       <button
         mat-icon-button
         *ngIf="!(drawerFixed$ | async)"
