changing default color theme and content area size

--- a/frontend/admin/src/app/logado/logado.component.scss
+++ b/frontend/admin/src/app/logado/logado.component.scss
@@ -28,6 +28,7 @@ mat-drawer-container {
       }
     }
     .content {
+      height: 100%;
       flex-grow: 1;
       overflow-y: auto;
       margin-top: 64px;
