--- a/frontend/admin/src/app/carteiras/carteiras.component.html
+++ b/frontend/admin/src/app/carteiras/carteiras.component.html
@@ -1,8 +1,9 @@
-<div fxLayout="column" style="overflow: hidden; height: 100%;">
-  <div style="display: block; overflow: auto; flex: 1 1 auto;">
+<div class="container">
+  <div class="content">
     <breadcrumb title="carteiras"></breadcrumb>
+    <content-spinner loading="true"></content-spinner>
   </div>
-  <actionbar gdArea="actions">
+  <actionbar>
     <button mat-icon-button>
       <mat-icon>navigate_before</mat-icon>
     </button>
