--- a/frontend/admin/src/app/logado/logado.component.html
+++ b/frontend/admin/src/app/logado/logado.component.html
@@ -12,6 +12,10 @@
       <mat-icon>account_balance_wallet</mat-icon>
       Carteiras
     </button>
+    <button mat-menu-item (click)="onMenuItemClicked('/taxas')">
+      <mat-icon>attach_money</mat-icon>
+      Taxas
+    </button>
   </mat-drawer>
 
   <mat-drawer-content>
