--- a/frontend/admin/src/theme.scss
+++ b/frontend/admin/src/theme.scss
@@ -17,20 +17,20 @@ $admin-primary-palette: (
   A400 : #fff3e5,
   A700 : #ffe8cb,
   contrast: (
-    50: #000020,
-    100: #000020,
-    200: #000020,
-    300: #000020,
-    400: #000020,
-    500: white,
-    600: white,
-    700: white,
-    800: white,
-    900: white,
-    A100: #000020,
-    A200: #000020,
-    A400: #000020,
-    A700: white,
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $dark-primary-text,
+    400: $dark-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
   )
 );
 // http://mcg.mbitson.com/#!?mcgpalette0=%237282da
@@ -50,20 +50,86 @@ $admin-accent-palette: (
   A400 : #afb8ff,
   A700 : #96a2ff,
   contrast: (
-    50: #000020,
-    100: #000020,
-    200: #000020,
-    300: #000020,
-    400: #000020,
-    500: white,
-    600: white,
-    700: white,
-    800: white,
-    900: white,
-    A100: #000020,
-    A200: #000020,
-    A400: #000020,
-    A700: white,
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $dark-primary-text,
+    400: $dark-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
+  )
+);
+// http://mcg.mbitson.com/#!?mcgpalette0=%23c94940
+$admin-warn-palette: (
+  50 : #f9e9e8,
+  100 : #efc8c6,
+  200 : #e4a4a0,
+  300 : #d98079,
+  400 : #d1645d,
+  500 : #c94940,
+  600 : #c3423a,
+  700 : #bc3932,
+  800 : #b5312a,
+  900 : #a9211c,
+  A100 : #ffe1e0,
+  A200 : #ffb0ad,
+  A400 : #ff7e7a,
+  A700 : #ff6561,
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $dark-primary-text,
+    400: $dark-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
+  )
+);
+// http://mcg.mbitson.com/#!?mcgpalette0=%23496b52
+$ubernise-green-palette: (
+  50 : #e9edea,
+  100 : #c8d3cb,
+  200 : #a4b5a9,
+  300 : #809786,
+  400 : #64816c,
+  500 : #496b52,
+  600 : #42634b,
+  700 : #395841,
+  800 : #314e38,
+  900 : #213c28,
+  A100 : #83ffa2,
+  A200 : #50ff7c,
+  A400 : #1dff55,
+  A700 : #03ff42,
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $dark-primary-text,
+    400: $dark-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
   )
 );
 
@@ -71,7 +137,7 @@ $admin-accent-palette: (
 // mat-palette accepts $palette-name, main, lighter and darker variants
 $primary: mat-palette($admin-primary-palette, 700, 300, 900);
 $accent: mat-palette($admin-accent-palette);
-$warn: mat-palette($mat-red, A200);
+$warn: mat-palette($admin-warn-palette, 500);
 
 $admin-theme: mat-light-theme(
   $primary,
