--- a/frontend/admin/src/app/logado/logado.component.scss
+++ b/frontend/admin/src/app/logado/logado.component.scss
@@ -22,6 +22,7 @@ mat-drawer-container {
         width: 32px;
         height: 32px;
         border-radius: 50%;
+        object-fit: cover;
       }
       .spacer {
         flex: 1 1 auto;
