--- a/frontend/admin/src/app/content-spinner/content-spinner.component.scss
+++ b/frontend/admin/src/app/content-spinner/content-spinner.component.scss
@@ -5,7 +5,8 @@
   align-items: start;
 
   >* {
-    flex-grow: 1;
+    // flex-grow: 1;
+    width: 100%;
   }
   .spinner-container {
     display: flex;
