adding initial viagens and dashboard modules as related resources

--- a/frontend/admin/src/app/logado/logado.component.html
+++ b/frontend/admin/src/app/logado/logado.component.html
@@ -16,6 +16,10 @@
       <mat-icon>attach_money</mat-icon>
       Taxas
     </button>
+    <button mat-menu-item (click)="onMenuItemClicked('/viagens')">
+      <mat-icon>directions_car</mat-icon>
+      Viagens
+    </button>
   </mat-drawer>
 
   <mat-drawer-content>
