--- a/frontend/admin/src/styles.scss
+++ b/frontend/admin/src/styles.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/@angular/material/theming';
+@import '~@angular/material/theming';
 
 // always include only once per project
 @include mat-core();
@@ -50,4 +50,11 @@ body {
       }
     }
   }
+}
+
+.text-positive {
+  color: map-get($admin-green-palette, 400);
+}
+.text-negative {
+  color: map-get($admin-warn-palette, 500);
 }
