adjusting date names fields in viagens collection, shadows in toolbar, dialog to create viagem

--- a/frontend/admin/src/app/carteiras/historico-dialog/historico-dialog.component.scss
+++ b/frontend/admin/src/app/carteiras/historico-dialog/historico-dialog.component.scss
@@ -17,6 +17,7 @@
     height: 60px;
   }
   mat-dialog-actions {
-    justify-content: right;
+    display: flex;
+    justify-content: flex-end;
   }
 }
