--- a/frontend/admin/src/app/dashboard/viagem-row/viagem-row.component.html
+++ b/frontend/admin/src/app/dashboard/viagem-row/viagem-row.component.html
@@ -2,8 +2,8 @@
   <mat-expansion-panel-header>
     <div class="expansion-header">
       <div class="date">
-        <span class="day">{{ viagem.data_inicio | date: 'dd' }}</span>
-        <span class="month">{{ viagem.data_inicio | date: 'MMM' | uppercase }}</span>
+        <span class="day">{{ viagem.data_inicial | date: 'dd' }}</span>
+        <span class="month">{{ viagem.data_inicial | date: 'MMM' | uppercase }}</span>
       </div>
       <div class="places">
         <div>
