--- a/frontend/admin/src/app/logado/logado.component.html
+++ b/frontend/admin/src/app/logado/logado.component.html
@@ -23,7 +23,7 @@
   </mat-drawer>
 
   <mat-drawer-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar class="mat-elevation-z2" color="primary">
       <button
         mat-icon-button
         *ngIf="!(drawerFixed$ | async)"
