--- a/frontend/admin/src/app/viagens/search/search.component.scss
+++ b/frontend/admin/src/app/viagens/search/search.component.scss
@@ -18,11 +18,11 @@ form {
       .mat-column-destino {
         width: 200px;
       }
-      .mat-column-data_inicio {
+      .mat-column-data_inicial {
         width: 100px;
         text-align: center;
       }
-      .mat-column-data_fim {
+      .mat-column-data_final {
         width: 100px;
         text-align: center;
       }
