--- a/frontend/admin/src/app/actionbar/actionbar.component.scss
+++ b/frontend/admin/src/app/actionbar/actionbar.component.scss
@@ -1,8 +1,12 @@
 @import '../../theme.scss';
 
-div {
-  display: flex;
-  padding: 5px;
-  color: mat-color($admin-accent-palette, A100);
-  background: mat-color($admin-accent-palette, 700);
+:host {
+  z-index: 1;
+
+  div {
+    display: flex;
+    padding: 5px;
+    color: mat-color($admin-accent-palette, A100);
+    background: mat-color($admin-accent-palette, 700);
+  }
 }
