--- a/frontend/admin/src/app/carteiras/carteiras.component.html
+++ b/frontend/admin/src/app/carteiras/carteiras.component.html
@@ -20,7 +20,12 @@
 
             <ng-container matColumnDef="saldo">
               <th mat-header-cell *matHeaderCellDef>Saldo</th>
-              <td mat-cell *matCellDef="let element">{{ element.saldo | currency: 'BRL' }}</td>
+              <td
+                mat-cell
+                *matCellDef="let element"
+                [ngClass]="element.saldo < 0 ? 'text-negative': 'text-positive'">
+                  {{ element.saldo | currency: 'BRL' }}
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="actions" stickyEnd>
