--- a/frontend/admin/src/app/viagens/search/search.component.html
+++ b/frontend/admin/src/app/viagens/search/search.component.html
@@ -57,14 +57,14 @@
                   <td mat-cell *matCellDef="let element">{{ element.descricao }}</td>
                 </ng-container>
 
-                <ng-container matColumnDef="data_inicio">
-                  <th mat-header-cell *matHeaderCellDef>Data Início</th>
-                  <td mat-cell *matCellDef="let element">{{ element.data_inicio | date: 'dd/MM/yyyy HH:mm' }}</td>
+                <ng-container matColumnDef="data_inicial">
+                  <th mat-header-cell *matHeaderCellDef>Data Inicial</th>
+                  <td mat-cell *matCellDef="let element">{{ element.data_inicial | date: 'dd/MM/yyyy HH:mm' }}</td>
                 </ng-container>
 
-                <ng-container matColumnDef="data_fim">
-                  <th mat-header-cell *matHeaderCellDef>Data Fim</th>
-                  <td mat-cell *matCellDef="let element">{{ element.data_fim | date: 'dd/MM/yyyy HH:mm' }}</td>
+                <ng-container matColumnDef="data_final">
+                  <th mat-header-cell *matHeaderCellDef>Data Final</th>
+                  <td mat-cell *matCellDef="let element">{{ element.data_final | date: 'dd/MM/yyyy HH:mm' }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="status">
@@ -92,6 +92,9 @@
     </div>
   </div>
   <actionbar>
+    <button mat-icon-button [disabled]="loading$ | async" (click)="onAdd()">
+      <mat-icon>add</mat-icon>
+    </button>
     <div class="spacer"></div>
     <button mat-icon-button [disabled]="loading$ | async" (click)="onSearch()">
       <mat-icon>search</mat-icon>
