--- a/frontend/admin/src/app/viagens/search/search.component.html
+++ b/frontend/admin/src/app/viagens/search/search.component.html
@@ -77,6 +77,23 @@
                   <td mat-cell *matCellDef="let element">{{ element.taxa_valor | currency: 'BRL' }}</td>
                 </ng-container>
 
+                <ng-container matColumnDef="actions" stickyEnd>
+                  <th mat-header-cell *matHeaderCellDef></th>
+                  <td mat-cell *matCellDef="let element">
+                    <button
+                      mat-icon-button
+                      [matMenuTriggerFor]="menu"
+                      [disabled]="(waiting$ | async) || element.status === 'cancelada'">
+                      <mat-icon>more_vert</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                      <button mat-menu-item (click)="onStart(element.id)" *ngIf="canStart(element)">Iniciar</button>
+                      <button mat-menu-item (click)="onFinalize(element.id)" *ngIf="canFinalize(element)">Finalizar</button>
+                      <button mat-menu-item (click)="onCancel(element.id)" *ngIf="canCancel(element)">Cancelar</button>
+                    </mat-menu>
+                  </td>
+                </ng-container>
+
                 <tr mat-header-row *matHeaderRowDef="tableHeaders; sticky: true"></tr>
                 <tr mat-row *matRowDef="let row; columns: tableHeaders">{{ row }}</tr>
               </table>
@@ -92,11 +109,11 @@
     </div>
   </div>
   <actionbar>
-    <button mat-icon-button [disabled]="loading$ | async" (click)="onAdd()">
+    <button mat-icon-button [disabled]="waiting$ | async" (click)="onAdd()">
       <mat-icon>add</mat-icon>
     </button>
     <div class="spacer"></div>
-    <button mat-icon-button [disabled]="loading$ | async" (click)="onSearch()">
+    <button mat-icon-button [disabled]="waiting$ | async" (click)="onSearch()">
       <mat-icon>search</mat-icon>
     </button>
   </actionbar>
