--- a/frontend/admin/src/app/viagem-finalize-dialog/viagem-finalize-dialog.component.html
+++ b/frontend/admin/src/app/viagem-finalize-dialog/viagem-finalize-dialog.component.html
@@ -1,6 +1,5 @@
+<h3 matDialogTitle>Selecione os passageiros...</h3>
 <mat-dialog-content>
-  <span>Quais foram os passageiros?</span>
-
   <div class="passageiros">
     <usuario-tile
       *ngFor="let passageiro of passageiros$ | async"
