--- a/frontend/admin/src/app/viagem-create-dialog/viagem-create-dialog.component.scss
+++ b/frontend/admin/src/app/viagem-create-dialog/viagem-create-dialog.component.scss
@@ -5,8 +5,13 @@ form {
   display: flex;
   flex-direction: column;
 
-  mat-form-field {
-    min-width: 240px;
+  mat-dialog-content {
+    display: flex;
+    flex-direction: column;
+
+    mat-form-field {
+      min-width: 240px;
+    }
   }
 }
 mat-dialog-actions {
