adding initial indicator to show inadimplence in dashboard

--- a/frontend/admin/src/app/dashboard/dashboard.component.html
+++ b/frontend/admin/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="content">
     <div class="content-padding">
+      <canvas height="200px" #canvas>{{ chart$ | async }}</canvas>
+
       <viagem-card
         *ngIf="viagemStarted$ | async as viagem"
         [disabled]="waiting$ | async"
