--- a/frontend/common/src/lib/components/viagem-resume/viagem-resume.component.scss
+++ b/frontend/common/src/lib/components/viagem-resume/viagem-resume.component.scss
@@ -74,16 +74,24 @@
 }
 .ride-content {
   display: flex;
-  flex-direction: column;
 
-  >span {
-    margin-bottom: 10px;
-  }
-  .label {
-    font-weight: bold;
-  }
-  .passengers {
+  >div {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    flex-grow: 1;
+
+    >span {
+      margin-bottom: 10px;
+    }
+    .label {
+      font-weight: bold;
+    }
+    .passengers {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+  >button {
+    margin-right: -10px;
   }
 }
